# RiscvEmulator

./: CMakeLists.txt  add.out  bus.c  bus.h  cpu.c  cpu.h  cpu32.c  cpu32.h  dram.c  dram.h  includes.h  jump.out  machine.c  machine.h  main.c  makefile  mulhtest.out  multest.out  program  rv32f.c  rv32f.h  rv32i.c  rv32i.h  rv32m.c  rv32m.h  test.out  trib.out  trib20.out  trib5.out  tribRec8.out  tribonacci.s
.cache/clangd/index/: bus.c.B5D0592FFA960A0B.idx  bus.h.2018B5371760AFA5.idx  cpu32.c.E7A835A1A4540673.idx  cpu32.h.725E59C4D253D807.idx  dram.c.24517BA6FE67C5BA.idx  dram.h.F6F1C8028232310F.idx  includes.h.DC0C36569D8BA34A.idx  machine.c.70543AF1B9679715.idx  machine.h.70CB0656EF8DA6D3.idx  main.c.211FAAB554AA0B1B.idx  rv32i.c.4CC66A5619A0479A.idx  rv32i.h.B0CF860A128A9A41.idx  rv32m.c.2F25BF18E3202AF9.idx  rv32m.h.9859F0CFB0156919.idx
32bit/: cpu32.c  cpu32.h
32bit/components/: bus.c  bus.h  dram.c  dram.h
32bit/rv32extensions/: rv32f.c  rv32f.h  rv32i.h  rv32m.c  rv32m.h
dependencies/: float_types.h  includes.h
